# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: load_files.py
gendiff/scripts/: gendiff.py
