[project]
name = "hexlet-code"
version = "0.1.0"
description = "This programm compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
